Fix alignment issue in CSS styles

--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ main {
 }
 
 #area-esquerda{
+    align-height: center;
     background-color: palevioletred;
     flex: 1;
     border-radius: 20px 0px 0px 20px;
